# agv_app_server

./: CMakeLists.txt  package.xml  readme.md
docs/: 1.方案设计.md  2.沟通.md  3.测试.md  APP与移动小车开发规划.docx
include/agv_app_server/: agv_app_server.hpp  command_handler.hpp  data_stream_handler.hpp  data_subscription_handler.hpp  get_operating_mode_handler.hpp  instant_action.hpp  point_cloud_util.hpp  set_rcs_online.hpp  start_task_chain.hpp  state_timer.hpp  task_executor.h  task_parser.h
src/: agv_app_server.cpp  instant_action.cpp  main.cpp  task_executor.cpp  task_parser.cpp
